--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 </head>
 
 <body>
-  <div id="app" class="container">
-    <div class="bulb"></div>
-  </div>
+  <div id="app" class="container"></div>
 </body>
 
 </html>
